--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+
+
 spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
@@ -5,10 +7,23 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/pure_rent?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
-    password: 753951
+    password: 980802a
     driver-class-name: com.mysql.jdbc.Driver
 mybatis:
   mapper-locations: classpath:generator/*.xml
 logging:
   level:
     com.zimug.bootlaunch: debug
+server:
+  port: 8888
+
+thymeleaf:
+  cache: false # 启用缓存:建议生产开启
+  check-template-location: true # 检查模版是否存在
+  enabled: true # 是否启用
+  encoding: UTF-8 # 模版编码
+  excluded-view-names: # 应该从解析中排除的视图名称列表（用逗号分隔）
+  mode: HTML5 # 模版模式
+  prefix: classpath:/templates/ # 模版存放路径
+  suffix: .html # 模版后缀
+
